--- a/FE/src/index.css
+++ b/FE/src/index.css
@@ -3,12 +3,15 @@
 @tailwind utilities;
 /* You can customize your global styles here */
 body {
-  margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  #root {
+  width: 100%;
+}
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', 'Courier', monospace;
 }
+
